Fixed broken CSS.

--- a/css/main.css
+++ b/css/main.css
@@ -34,11 +34,7 @@ html {
 }
 
 body {
-<<<<<<< HEAD
 	background: #F1F1E4 fixed;
-=======
-	background:url(../images/backgrounds/wood40.png) fixed;
->>>>>>> FETCH_HEAD
 	background-repeat:repeat;
 	width: 100%;
 	height:100%;
@@ -67,10 +63,7 @@ body {
 a{ 
 	color: #ffffff;
 	text-decoration: none;
-<<<<<<< HEAD
 	font-weight:600;
-=======
->>>>>>> FETCH_HEAD
 	}
 
 a:hover { 
@@ -120,11 +113,7 @@ ul{
 }
 
 .header-bottom{
-<<<<<<< HEAD
 	color:rgba(93,124,129,1.00);
-=======
-	color:rgba(0,0,0,0.2);
->>>>>>> FETCH_HEAD
 	text-transform:uppercase;
 	bottom:0;
 	text-align:center;
@@ -152,16 +141,11 @@ ul{
 	
 main{
 	margin-top:6em;
-<<<<<<< HEAD
 	padding-top:5%;
-=======
-	padding-top:25%;
->>>>>>> FETCH_HEAD
 	padding-bottom: 5%;
 	width: 100%;
 	background-image:url(../images/graphics/nav-back.svg);
 	background-repeat:no-repeat;
-<<<<<<< HEAD
 }
 
 .work {
@@ -234,30 +218,7 @@ h4{
 	color:rgba(179,174,146,1.00);
 }
 
-=======
-}
 
-.work {
-	margin-top: 2em;
-	margin-left:0;
-	margin-right:0;
-	width: 100%;
-	background-color: rgba(111,162,166,0.4);
-	padding-bottom: 7em;
-}
-
-.about{
-	margin-top:-1em;
-	width: 100%;
-	background-color: rgba(203,183,16,0.7); 
-	padding-bottom: 3em;
-}
-
-.contact {
-	width: 100%
-}
-
->>>>>>> FETCH_HEAD
 .footer {
 	width: 100%;
 	text-align: center;
@@ -319,8 +280,6 @@ h4{
 .nav-toggle[data-state="expanded"]{
 	display: block;
 }
-<<<<<<< HEAD
-
 .close{
 	z-index:0;
 	position:absolute;
@@ -370,55 +329,6 @@ h3, .tera {
 	 cursor:crosshair;
 }
 
-=======
-
-.close{
-	z-index:0;
-	position:absolute;
-	width: 100%;
-	opacity:0;
-	padding: 0;
-	margin:0;
-	height: 100%;
-}
-
-
-
-.dropdown{
-	display: block;
-	width: 100%;	
-	left:0;
-}
-
-p{
-	font-size: 0.7em;
-	padding-left:20%;
-	padding-right:20%;
-	padding-top: 5%;
-}
-
-.nav li{
-	display: inline-block;
-	border-bottom: 1px solid #fff;
-}
-
-h3, .tera {
-	font-size: 0.7em;
- 	line-height: 1.6875;
-}
-
-@media only screen and (min-width: 25em) {
-	
-	.piece:hover{
-	background-size:contain;
-	opacity: .5;
-	-webkkit-transition: all .9s ease-in-out;
-	-webkkit-transition: all .9s ease-in-out;
-	-moz-transition: all .9s ease-in-out;
-	 cursor:crosshair;
-}
-
->>>>>>> FETCH_HEAD
 	.logo{
 		width: 200px;
 	}
@@ -443,7 +353,6 @@ h3, .tera {
 		text-decoration: none;
 	}
 	
-<<<<<<< HEAD
 	h3, .tera {
 		font-size: 1.3em;
 	}
@@ -459,35 +368,6 @@ h3, .tera {
 	
 	.image{
 		width: 100%;
-=======
-		h3, .tera {
-		font-size: 1.3em;
-	}
-
-
-	
-@media only screen and (min-width: 38em) {
-
-	.nav li{
-		border:hidden;
-	}
-	
-	.image{
-	width: 100%;
-	}
-	
-	h3, .tera {
-		font-size: 1.6em;
-	}
-
-	
-	.masthead {
-		text-align: left;
-	}
-
-	.nav-top{
-		text-align:right;
->>>>>>> FETCH_HEAD
 	}
 	
 	h3, .tera {
